fix infobox size on ios

--- a/app/pickbanscreen.css
+++ b/app/pickbanscreen.css
@@ -198,7 +198,7 @@
 
 .heroInfo {
     padding: 10px;
-    min-height: 120px;
+    min-height: 140px;
 
     border-style: solid;
 
